--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -2508,6 +2508,10 @@ input[type="text"].select2-search__field {
   margin-top: 0;
 }
 
+.ast-top-divider.customize-control-ast-settings-group .ast-toggle-desc-wrap .ast-adv-toggle-icon {
+    top: 23px;
+}
+
 .customize-control-ast-slider .wrapper {
   display: flex;
 }
